objects/Order.object
<CustomObject>
    <fields>
        <fullName>CopyOrderStatus__c</fullName>
        <label>Copy Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration_Date__c</fullName>
        <label>Credit Card Expiration Date</label>
        <length>5</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Name__c</fullName>
        <label>Credit Card Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>16</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <label>DB Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delay_Reason__c</fullName>
        <label>Delay Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP_Order_Status_Icon__c</fullName>
        <formula>IF(  ISPICKVAL(ERP_Order_Status_Text__c, &quot;Late&quot;) , IMAGE(&quot;/resource/ERP_order_status_icon_exception&quot;, &quot;Exception&quot;) + &quot; Late&quot; ,  IF( ISPICKVAL(ERP_Order_Status_Text__c, &quot;On Time&quot;) , IMAGE(&quot;/resource/ERP_order_status_icon_ok&quot;, &quot;Ok&quot;) + &quot; On Time&quot;, IMAGE(&quot;/resource/ERP_order_status_icon_ok&quot;, &quot;Ok&quot;) + &quot; Early&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Order_Status_Text__c</fullName>
        <label>ERP Order Status Text</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Early</fullName>
                </value>
                <value>
                    <fullName>On Time</fullName>
                </value>
                <value>
                    <fullName>Late</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <description>This is an icon field indicating status, tied to the Order Status field.</description>
        <formula>IMAGE(URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Status, 
&quot;Draft&quot;, &quot;015Hr000003iK9c&amp;oid=00DHr0000010MFf&quot;, 
&quot;Active&quot;, &quot;015Hr000003iK9Z&amp;oid=00DHr0000010MFf&quot;, 
&quot;Activated&quot;, &quot;015Hr000003iK9Z&amp;oid=00DHr0000010MFf&quot;, 
&quot;015Hr000003iK9Z&amp;oid=00DHr0000010MFf&quot;),&quot;Status&quot;,24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFG_All_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Need to link Order Object to specific contact (ie: Lauren Bailey) for Professional Site.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MFG_Discrete_Partners_Accepted_Date__c</fullName>
        <label>Accepted Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MFG_Discrete_Partners_Expected_Date__c</fullName>
        <label>Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MFG_Discrete_Partners_Order_Delay__c</fullName>
        <formula>MFG_Discrete_Partners_Accepted_Date__c -  MFG_Discrete_Partners_Expected_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Delay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderIdReferenceNumber__c</fullName>
        <label>Order Id Reference Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentsCanBeOrderedSeparately__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If there are Order Product Components on the Order that can be ordered separately, then this field will be flagged.</description>
        <inlineHelpText>If there are Order Product Components on the Order that can be ordered separately, then this field will be flagged.</inlineHelpText>
        <label>Components Can Be Ordered Separately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order is contracted.</description>
        <inlineHelpText>Indicates if the order is contracted.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</description>
        <inlineHelpText>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ContractingMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FirstContractedOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If Contracting Method is set to &quot;Single Contract&quot;, this field references the original contracted order, where the single contract is created from. All subsequent contracted subscriptions and assets will be added to the single contract associated to the original contracted order.</description>
        <inlineHelpText>If Contracting Method is set to &quot;Single Contract&quot;, this field references the original contracted order, where the single contract is created from. The field value is set by the system.</inlineHelpText>
        <label>First Contracted Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Single Contracted Orders</relationshipLabel>
        <relationshipName>FirstContractedOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderBookings__c</fullName>
        <description>Total amount of all order product bookings.</description>
        <inlineHelpText>Total amount of all order product bookings.</inlineHelpText>
        <label>Order Bookings</label>
        <summarizedField>OrderItem.SBQQ__OrderProductBookings__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__PaymentTerm__c</fullName>
        <description>The payment term for this order.</description>
        <inlineHelpText>The payment term for this order.</inlineHelpText>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PaymentTerm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatusMessage__c</fullName>
        <description>The price calculation status message.</description>
        <inlineHelpText>The price calculation status message</inlineHelpText>
        <label>Price Calculation Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatus__c</fullName>
        <description>The order price calculation  job status.  It is set by the system.</description>
        <inlineHelpText>Indicates the order price calculation job status.  It is set by the system.</inlineHelpText>
        <label>Price Calculation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__JobStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote where the order is created from.</description>
        <inlineHelpText>The quote where the order is created from.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Specify the term of the renewal. By default, it matches the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxAmount__c</fullName>
        <description>The estimated tax amount</description>
        <inlineHelpText>The tax amount</inlineHelpText>
        <label>Estimated Tax</label>
        <summarizedField>OrderItem.SBQQ__TaxAmount__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalAmount__c</fullName>
        <description>The total order amount with tax included</description>
        <inlineHelpText>The total order amount with tax included</inlineHelpText>
        <label>Total Amount (With Tax)</label>
        <summarizedField>OrderItem.SBQQ__TotalAmount__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>DHL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Contracted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Track_It__c</fullName>
        <formula>CASE( Shipping_Method__c , &quot;Fedex&quot;, HYPERLINK(&quot;http://www.fedex.com/Tracking?cntry_code=us&amp;tracknumbers=&quot;&amp; Tracking_ID__c,&quot;Track&quot;), &quot;UPS&quot;, HYPERLINK(&quot;http://wwwapps.ups.com/WebTracking/processInputRequestHTMLVersion=5.0&amp;sort_by=status&amp;loc=en_US&amp;InquiryNumber1=&quot;&amp; Tracking_ID__c &amp; &quot;&amp;track.x=32&amp;track.y=7&quot;, &quot;Track&quot;), &quot;DHL&quot;, HYPERLINK (&quot;http://track.dhl-usa.com/TrackByNbr.asp?ShipmentNumber=&quot; &amp; Tracking_ID__c,&quot;Track&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Track It!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_ID__c</fullName>
        <description>Used by the &quot;Track It&quot; field to look up the shipping status of a package.</description>
        <inlineHelpText>Sample Tracking Number:
FedEx: 123456789012</inlineHelpText>
        <label>Tracking ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <description>This is to ensure that icons show in Salesforce and Communities.</description>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;), 
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)), 
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)) 
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillNow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__BilledAmountwithouttax__c</fullName>
        <inlineHelpText>The sum of all invoices for this order (excluding tax).</inlineHelpText>
        <label>Billed Amount (without tax)</label>
        <summarizedField>OrderItem.blng__BilledAmountwithouttax__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__BilledTax__c</fullName>
        <inlineHelpText>The sum of all taxes on invoices for this order.</inlineHelpText>
        <label>Billed Tax</label>
        <summarizedField>OrderItem.blng__BilledTax__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__BillingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Billing Account)</relationshipLabel>
        <relationshipName>BillingAccountOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingDayOfMonth__c</fullName>
        <label>Billing Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__CanceledBillings__c</fullName>
        <inlineHelpText>Total of all canceled order products.</inlineHelpText>
        <label>Canceled Billing Amount (without tax)</label>
        <summarizedField>OrderItem.blng__CanceledBillings__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceBatch__c</fullName>
        <label>Invoice Batch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceBatch</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__PendingBillings__c</fullName>
        <inlineHelpText>Total pending for all order products.</inlineHelpText>
        <label>Pending Billing Amount (without tax)</label>
        <summarizedField>OrderItem.blng__PendingBillings__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TotalBilling__c</fullName>
        <formula>blng__BilledAmountwithouttax__c  +  blng__BilledTax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The sum of all invoice lines and taxes for this order.</inlineHelpText>
        <label>Total Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>db_days_EffectiveDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>EffectiveDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>ORDERS.ACTIVATED_DATE</columns>
        <columns>ORDERS.CREATED_DATE</columns>
        <columns>ORDERS.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>SALES.ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Meridian</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <filters>
            <field>ORDERS.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>ORDERS.ACTIVATED_DATE</columns>
        <columns>ORDERS.CREATED_DATE</columns>
        <columns>ORDERS.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDER.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order.Order_Business</value>
        </filters>
        <label>All Orders</label>
    </listViews>
    <listViews>
        <fullName>Lauren_Bailey</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SALES.ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Omega Incorporated</value>
        </filters>
        <filters>
            <field>MFG_All_Contact__c</field>
            <operation>equals</operation>
            <value>Lauren Bailey</value>
        </filters>
        <label>Lauren Bailey</label>
    </listViews>
    <listViews>
        <fullName>MFG_Discrete_Partners_My_Orders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDERS.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>My Orders</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SRM_Orders</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>MFG_Discrete_Partners_Expected_Date__c</columns>
        <columns>MFG_Discrete_Partners_Accepted_Date__c</columns>
        <columns>MFG_Discrete_Partners_Order_Delay__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.ORDER_NUMBER</field>
            <operation>equals</operation>
            <value>00006550</value>
        </filters>
        <filters>
            <field>ORDERS.ORDER_NUMBER</field>
            <operation>equals</operation>
            <value>00006552</value>
        </filters>
        <label>SRM Orders</label>
    </listViews>
    <recordTypes>
        <fullName>Order_Business</fullName>
        <active>true</active>
        <description>Used for B2B order use cases.  Includes contract fields.</description>
        <label>Order - Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Order_Consumer</fullName>
        <active>true</active>
        <description>Order record type used for consumer use case.  Contract and related business fields have been removed from this layout.</description>
        <label>Order - Consumer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__Cannot_Contract_New_Order</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISNEW(), SBQQ__Contracted__c)</errorConditionFormula>
        <errorDisplayField>SBQQ__Contracted__c</errorDisplayField>
        <errorMessage>Can&apos;t contract the order. Activate the order and try again.</errorMessage>
    </validationRules>
</CustomObject>